--- a/templates/home/contact.html
+++ b/templates/home/contact.html
@@ -1,1 +1,38 @@
 {% extends 'home/base.html' %}
+
+{% block content %}
+<section class="row">
+
+    
+    <div class="mt-5 col-8 col-lg-6">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d791.3385449228249!2d45.044652472110855!3d37.49956386932891!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2s!4v1662556794036!5m2!1sen!2s" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+
+    <div class="col-3 col-lg-4">
+        <br />
+        <br />
+        <h3>اطلاعات تماس</h3>
+        <hr />
+        <p class="lead"><i class="fa fa-instagram" aria-hidden="true" id="style-icon"></i> &nbsp;
+            <a href='https://www.instagram.com/' class="text-decoration-none" style="color: black;" target="_blank">
+                    اینستاگرام              
+            </a>
+        </p>
+        <p class="lead"><i class="fa fa-telegram" aria-hidden="true" id="style-icon"></i> &nbsp;
+            <a href="#" class="text-decoration-none" target="_blank" style="color: black;">
+                  تلگرام
+            </a>
+        </p>
+        <p class="lead"><i class="fa fa-mobile" id="style-icon" aria-hidden="true"></i> &nbsp; موبایل:
+                 09901354130<br />
+                 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 09147953368
+        </p>
+        <p class="lead">
+            <i class="fa fa-location-arrow" aria-hidden="true" id="style-icon"></i> 
+            &nbsp;آدرس: <br /> شعبه ۱- 
+                    ارومیه - انتهای خیابان حضرت‌پور - پایین‌تر از فروشگاه کوروش - املاک پردیس
+                    <br /> شعبه ۲ - ارومیه - شهرک اندیشه - گل رز ۲ - پشت مدرسه مجنونیان - املاک اندیشه (احمدزاده)
+        </p>
+    </div>
+</section>
+{% endblock %}
